--- a/MvcApp/Views/Home/Index.cshtml
+++ b/MvcApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Home</h2>
 <h3>Home page of MVC app</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>All http headers</p>
 
 @foreach (var header in Context.Request.Headers)
 {
